# mongolian-script

./: README  feature.html  index.html
apple/fonts/AAT/: MongolianScript.mif  README  replacemarks.pl
misc/: baiti2sudar.txt  monbaiti_feature.txt  sudar2baiti_glyphs.txt
otf-utils/: .classpath  .project  README  feature.html  otf_feature_file_generator.rb  otf_feature_file_parser.rb  otf_feature_html_generator.rb  otf_mock_engine.rb  sudar_unicode_name.rb
otf-utils/src/otf/feature/file/: Feature.java  FeatureFileGenerator.java  Group.java  Lookup.java  SimpleFeatureFile.java  Substitution.java
otf-utils/src/otf/feature/html/: HTMLGenerator.java  footer  header  template.html
pango/modules/mongolian/: Makefile.am  README  freebsd.patch  mongolian-fc.c  ubuntu_lucid_lynx.patch  ubuntu_maverick_meerkat.patch  ubuntu_precise_pangolin.patch
